--- a/src/css/pickCarPage.css
+++ b/src/css/pickCarPage.css
@@ -6,3 +6,8 @@
     padding-top: 0px;
     padding-bottom: 0px;
 }
+
+/* .MuiList-root-2.MuiList-padding-3 {
+    padding-top: 0px;
+    padding-bottom: 0px;
+} */
