--- a/src/css/pickAcceptedOrderCarPage.css
+++ b/src/css/pickAcceptedOrderCarPage.css
@@ -15,3 +15,7 @@
     padding-top: 0px;
     padding-bottom: 0px;
 }
+.MuiList-padding-37 {
+    padding-top: 0px !important; 
+    padding-bottom: 0px !important;
+}
