--- a/src/css/viewAllOrderPage.css
+++ b/src/css/viewAllOrderPage.css
@@ -5,14 +5,7 @@
     display: flex;
     flex-direction: column;
   }
-  #tab-bar .demoName {
-    height: 40px;
+  .MuiList-root-36.MuiList-dense-38.MuiList-padding-37 {
+    padding-top: 0px;
+    padding-bottom: 0px;
   }
-  #tab-bar .demo-preview-item .am-tab-bar {
-    background-color: white;
-  }
-  .am-list-header {
-    background-color: #1B82D2;
-
-  }
-
